--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "formik": "^2.4.3",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -17,6 +18,7 @@
     "sass": "^1.66.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "yup": "^1.2.0"
   }
 }
