--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "classnames": "^2.3.2",
     "formik": "^2.4.3",
     "jwt-decode": "^3.1.2",
     "next": "13.4.19",
