--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.3",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.3",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
